fix movie overflow ui

--- a/src/styles/components/_MovieList.scss
+++ b/src/styles/components/_MovieList.scss
@@ -5,13 +5,14 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
-    height: 100%;
-    overflow-y: scroll;
+    // height: 100%;
+    // overflow-y: scroll;
     padding-top: 50px;
     padding-bottom: 50px;
     position: relative;
     text-align: center;
     width: 100%;
+
 }
 
 // Extra small devices (portrait phones, less than 576px)
