--- a/src/styles/components/_movieDetails.scss
+++ b/src/styles/components/_movieDetails.scss
@@ -14,7 +14,6 @@
     justify-content: flex-end;
     padding-left: 50px;
     padding-bottom: 25px;
-    overflow-y: scroll;
     position: relative;
 }
 
